codepkg/objects/Document_Upload_Support__mdt.object
<CustomObject>
    <description>used in ALS_DocumentUpload_Ctrl to check the masterObjName and lookupFieldName.</description>
    <fields>
        <fullName>Lookup_Field_Name__c</fullName>
        <label>Lookup Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Columns__c</fullName>
        <description>Show Document Columns from Custtom metadata</description>
        <label>Table Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Document Upload Support</label>
    <pluralLabel>Document Upload Supports</pluralLabel>
</CustomObject>